# agronomy_llm_benchmarking

./: .gitignore  .replit  README.md  agronomy_benchmark_questions.json  benchmark_runner.py  build_image_questions.py  config.py  crontab.example  harden_text_questions.py  llm_api_calls.py  main.py  openrouter_catalog.py  output.json  pyproject.toml  quizlet.txt  report_generator.py  requirements.txt  result_analysis.py  run_benchmark_cron.sh  run_benchmark_until_complete.sh
benchmark_results/: Mixtral-8x7B-Instruct-v0.1_answers.json  MythoMax-L2-13b_answers.json  Nous-Hermes-2-Yi-34B_answers.json  OpenHermes-2p5-Mistral-7B_answers.json  agronomYi-34b_answers.json  claude-2_answers.json  claude-3-haiku_answers.json  claude-3-opus_answers.json  claude-3.5-sonnet_answers.json  fbn-norm_answers.json  gemini-flash-1.5_answers.json  gemini-pro-1.5_answers.json  gpt-3.5-turbo_answers.json  gpt-4-1106-preview_answers.json  gpt-4_answers.json  gpt-4o_answers.json  hermes-2-pro-llama-3-8b_answers.json  llama-3-70b-instruct:nitro_answers.json  llama-3-70b-instruct_answers.json  llama-3-8b-instruct:nitro_answers.json  mistral-7b-instruct_answers.json  mistral-medium_answers.json  mixtral-8x7b-instruct_answers.json  norm_answers.json  nous-hermes-yi-34b_answers.json  openhermes-2.5-mistral-7b_answers.json  phi-3-medium-128k-instruct_answers.json  phi-3-mini-128k-instruct_answers.json  qwen-2-72b-instruct_answers.json  run_heartbeat.json  yi-34b-chat_answers.json
benchmark_results/model_results/: aion-labs_aion-2.0_answers.json  allenai_molmo-2-8b_answers.json  fbn_norm_answers.json  (+96 more)
